feat(user): сделан эндпоинт [patch] /user/name и документацию к нему
